# spotify-artist-to-playlist

./: README.md  pyproject.toml
spotify_artist_to_playlist/: albums.py  artist.py  authentication.py  main.py  playlist.py  settings.py  tracks.py
